Se agregarons los endpoints para crear vehículos y se realizaron cambios en seguridad
Se hizo cambio en PlanificacionFacade por problemas de inmutabilidad en la lista retornada. Además, se realizaron cambios en el acceso a endpoints según el rol